# wxwidgets_test

./: .gitignore  CMakeLists.txt  cmake_batch.sh  msvc_build.sh
src/: app.h  main.cc  main_frame.h
